--- a/src/Makefile
+++ b/src/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
-CFLAGS=
+CFLAGS=-Wall -Wextra -std=c11
 
-mysh: shell.c interpreter.c shellmemory.c
-	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c
-	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o
+mysh: shell.c interpreter.c shellmemory.c utils.c
+	$(CC) $(CFLAGS) -c shell.c interpreter.c shellmemory.c utils.c
+	$(CC) $(CFLAGS) -o mysh shell.o interpreter.o shellmemory.o utils.o
 
 clean:
 	rm mysh; rm *.o
